updated but did not fix project card elements alignment, added gh repo links

--- a/src/App.css
+++ b/src/App.css
@@ -118,6 +118,10 @@ font-size:.8em;
 
 }
 
+.project-card-section {
+  height: 19.5%
+}
+
 .projects-card * {
   text-decoration: none;
   color: black;
@@ -136,6 +140,14 @@ font-size:.8em;
   border-radius: 2px 2px;
   box-shadow: 1px 1px 1px grey;
   cursor: pointer;
+  margin-bottom: 8%;
+}
+
+#gh-button-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  height: 12%;
 }
 
 .projects-card button:hover {
@@ -193,10 +205,13 @@ font-size:.8em;
   .projects-card {
     background-color: white;
     margin: 2%;
-    height: 55vh;
     width: 16vw;
     border-radius: 1%;
     font-size: .9em;
+  }
+
+  .project-card-section {
+    height: 19.5%
   }
 
   .projects-card:hover {
